@@ -1,3 +1,5 @@
+09-Apr-2016 Fixes #208. Address performance issues identified by SlimTune in generating file filters for VisualStudio projects. A large project tested (a solution with 99 projects) showed a 50% reduction in time spent executing the dependency graph afer this change.
+
 08-Apr-2016 Fixes #207. Added predication on the settings type in VisualCCommon.Compiler's PublicPatch for C.ICommonCompilerSettings. This would have resulted in a Null reference exception if applied to any module Settings class that doesn't implement that interface. This could happen for procedurally generated source files with custom Settings.
 
 07-Apr-2016 Fixes #205. Mingw now also supports the C.Cxx.ELanguageStandard.GnuCxx98 mode.
